# metrics-processor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  openapi-schema.yaml  zuul.yaml
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml  coverage.yml  lint.yml  mdbook.yml
.specify/memory/: constitution.md
doc/: SUMMARY.md  book.toml  config.md  convertor.md  index.md  reporter.md  testing.md
doc/api/: authentication.md  endpoints.md  examples.md
doc/architecture/: data-flow.md  diagrams.md  overview.md
doc/book/: 404.html  book.toml  config.html  index.html  print.html  searchindex.json
doc/configuration/: datasource.md  environments.md  examples.md  flag-metrics.md  health-metrics.md  metric-templates.md  overview.md  schema.md
doc/getting-started/: development.md  project-structure.md  quickstart.md
doc/guides/: deployment.md  troubleshooting.md
doc/integration/: adding-backends.md  graphite.md  interface.md
doc/modules/: api.md  common.md  config.md  graphite.md  overview.md  sd.md  types.md
doc/schemas/: README.md  config-schema.json  patterns.json
docs/: TESTING.md  book.toml  convertor.html  reporter.html  searchindex.js
playbooks/rust/: build.yaml  run.yaml
specs/001-project-documentation/: IMPLEMENTATION_REPORT.md  data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-project-documentation/checklists/: requirements.md
specs/001-project-documentation/contracts/: config-schema.json
specs/002-functional-test-suite/: IMPLEMENTATION_REPORT.md  IMPLEMENTATION_STATUS.txt  plan.md  spec.md  tasks.md  test-implementation-summary.md
specs/002-functional-test-suite/checklists/: requirements.md
specs/003-sd-api-v2-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-sd-api-v2-migration/checklists/: requirements.md
specs/003-sd-api-v2-migration/contracts/: README.md  components-api.md  incidents-api.md
specs/003-sd-api-v2-migration/contracts/request-examples/: create-incident-multi-component.json  create-incident-single-component.json
specs/003-sd-api-v2-migration/contracts/response-examples/: components-list.json  incident-created.json
src/: api.rs  common.rs  config.rs  graphite.rs  lib.rs  main.rs  sd.rs  types.rs
src/api/: v1.rs
tests/: documentation_validation.rs  integration_api.rs  integration_e2e_reporter.rs  integration_health.rs  integration_sd.rs
tests/docker/: carbonapi.yml  docker-compose.yml  go-carbon.conf
tests/fixtures/: configs.rs  graphite_responses.rs  helpers.rs  mod.rs
