[package]
name = "cloudmon-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="~0.5" }
chrono = "~0.4"
evalexpr = "7"
http = "~0.2"
new_string_template = "~1.3"
regex = "~1.5"
reqwest = { version = "~0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_yaml = "~0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "~0.4" }
tower-http = { version = "~0.3", features = ["trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }
uuid = { version = "~1.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
mockito = "~0.31"
tokio-test = "*"

[dev-dependencies]
mockito = "~0.31"
tokio-test = "*"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3"
