[package]
name = "cloudmon-metrics"
version = "0.2.0"
edition = "2021"

[lib]
name = "cloudmon_metrics"

[[bin]]
name="cloudmon-metrics-convertor"
path="src/bin/convertor.rs"

[[bin]]
name="cloudmon-metrics-reporter"
path="src/bin/reporter.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="~0.6" }
axum-macros = { version="~0.3" }
chrono = "~0.4"
config = "~0.13"
evalexpr = "~9.0"
glob = "~0.3"
jwt = "~0.16"
itertools = "~0.10"
hmac = "~0.12"
http = "~0.2"
new_string_template = "~1.4"
regex = "~1.8"
reqwest = { version = "~0.11", default-features = false, features = ["rustls-tls", "json"] }
schemars = "~0.8"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_yaml = "~0.9"
serde_qs = "~0.12"
sha2 = "~0.10"
tokio = { version = "~1.28", features = ["full"] }
tower = { version = "~0.4" }
tower-http = { version = "~0.4", features = ["trace", "request-id", "util"] }
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }
uuid = { version = "~1.3", features = ["v4", "fast-rng"] }

[dev-dependencies]
mockito = "~1.0"
tempfile = "~3.5"
tokio-test = "*"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }

[build-dependencies]
schemars = "~0.8"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3"
